Fix text contrast to AAA standard

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 0.775rem;
-  color: hsl(228, 12%, 48%);
+  color: hsl(228deg 12% 37.05%);
   text-transform: uppercase;
   letter-spacing: 0.5rem;
 }
@@ -75,7 +75,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   line-height: 1.6;
-  color: hsl(228, 12%, 48%);
+  color: hsl(228deg 12% 37.05%);
 }
 
 .prices {
@@ -96,7 +96,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   text-decoration: line-through;
-  color: hsl(228, 12%, 48%);
+  color: hsl(228deg 12% 37.05%);
 }
 
 /* .original-price {
@@ -104,7 +104,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   text-decoration: line-through;
-  color: hsl(228, 12%, 48%);
+  color: hsl(228deg 12% 37.05%);
 } */
 
 .cart-button {
